--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.1",
     "eslint": "^7.32.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
